improved usability on phones and stop game if first start for alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,13 +15,19 @@ body {
   overflow: hidden;
 }
 
+h2 {
+  font-size: xx-large;
+}
+
 i {
   position: absolute;
   border: solid white;
-  border-width: 0 30px 30px 0;
+  border-width: 0 20px 20px 0;
   display: inline-block;
-  padding: 30px;
-  opacity: 0.3;
+  padding: 50px;
+  margin: 100px;
+  opacity: 0.2;
+  font-size: 20px;
 }
 
 i.pause {
@@ -34,6 +40,11 @@ i.pause {
   z-index: 3;
   opacity: 1;
   cursor: pointer;
+  font-size: 100px;
+  padding: 0px;
+  margin: 0px;
+  font-style: normal;
+  color: #ffaa00;
 }
 
 .right {
@@ -64,7 +75,7 @@ i.pause {
 .textContainer {
   position: absolute;
   font-family: 'press_startregular';
-  left: 5%; 
+  left: 1%; 
   top: 5%; 
   color: black;  
   font-size: 20px;
@@ -104,7 +115,8 @@ form input[type=text] {
   color: orange;
   border: 1px solid orange;
   width: 30%;
-  min-width: 450px;
+  min-width: 500px;
+  font-size: 15px;
 }
 
 input:disabled {
@@ -114,6 +126,7 @@ input:disabled {
 .label {
   display: block;
   font-family: 'press_startregular';
+  font-size: 20px;
 }
 
 .formgroup {
@@ -132,13 +145,19 @@ input[type=button], input[type=submit] {
 .selectButton {
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 40px;
+  padding: 40px;
+  margin-left: 10px;
+  margin-top: -20px;
+  margin-right: 10px;
+  margin-bottom: -20px;
 }
 
 .startButton {
   color:orange;
   font-family: 'press_startregular';
-  font-size: 30px;
+  margin-top: 20px;
+  font-size: 45px;
 }
 
 h2 {
@@ -191,7 +210,7 @@ i.pause.dragging {
   }
 }
 
-.paused {
+.paused canvas {
   -webkit-filter: grayscale(70%);
   -moz-filter: grayscale(70%);
   -ms-filter: grayscale(70%);
